--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ h1, h2, h3, h4, h5, h6{
 
 header{
     text-align: center;
+    padding-bottom: 10px;
 }
 
 
@@ -99,6 +100,11 @@ nav a{
     border: 1px solid #c03;
     display: block;
     padding 2px 10px; 
+}
+
+nav a:hover{
+    background: #c03;
+    color:#fff;
 }
 
 #hero{
@@ -193,4 +199,40 @@ nav a{
 
 #cta h2, #cta p{
     color: #fff;
+}
+
+footer{
+    padding:40px;
+    
+}
+
+footer a{
+    text-decoration: none;
+    display: inline-block;
+    padding:10px;
+    width: 45px;
+    border: 1px solid #c03;
+    border-radius:50px; 
+    margin-top: 10px;
+}
+
+
+footer a:nth-child(2){
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+
+footer .fa{
+    color:#c03;
+    font-size:25px;
+}
+
+
+footer a:hover{
+    background: #c03;
+}
+
+footer a:hover .fa{
+    color:#fff;
 }
