--- a/myassets/mycss/mycss.css
+++ b/myassets/mycss/mycss.css
@@ -1,14 +1,15 @@
 
 
-@import url('https://fonts.googleapis.com/css?family=Crimson+Text|Poppins|Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text|Neucha|Poppins|Rock+Salt|Source+Code+Pro&display=swap');
+
 
 /*
 font-family: 'Poppins', sans-serif;
 font-family: 'Crimson Text', serif;
 font-family: 'Source Code Pro', monospace;
+font-family: 'Neucha', cursive;
+font-family: 'Rock Salt', cursive;
 */
-
-
 
 
 
@@ -21,7 +22,12 @@ font-family: 'Source Code Pro', monospace;
 }
 
 
-h1, h2, h3, h4, h5, h6{
+h1{
+    font-family: 'Rock Salt', cursive;
+}
+
+
+h2, h3, h4, h5, h6{
     font-family: 'Source Code Pro', monospace;
     text-transform: uppercase;
 }
@@ -32,11 +38,6 @@ hr{
  background-color: white;
 height: 1px;
 border: 1px dashed #000;
-}
-
-#middleline{
-     background-color: white;
-height: 2px;
 }
 
 /*Nav*/
@@ -110,6 +111,31 @@ header h4{
 
 
 /*specialty*/
+
+.firstContainer{
+
+}
+
+.aboutme{
+
+    font-family: 'Rock Salt', cursive;
+}
+
+.aboutme h1{
+    font-family: 'Rock Salt', cursive;
+}
+
+#nameSizeBigger{
+    font-size: 45px;
+    font-family: 'Rock Salt', cursive;
+}
+
+#specialtySizeBigger{
+     font-size: 45px;
+    font-family: 'Rock Salt', cursive;
+}
+
+
 .specialty{
     width:33.333333%;
     height: 300px;
@@ -215,6 +241,72 @@ header h4{
     align-items: center;
     justify-content: center;
 }
+
+
+
+#specialty2{
+    margin-bottom: 40px;
+}
+
+
+
+.contactMe{
+    margin-top: 30px;
+   
+}
+
+
+.contactMe .fas{
+     text-decoration: none;
+    color:black;
+    
+}
+
+.contactMe .far{
+     text-decoration: none;
+    color:black;
+    
+}
+
+.contactMe a{
+    text-decoration: none;
+    color:black;
+    font-weight: bold;
+}
+
+.contactMe iframe{
+    filter:grayscale(100%);
+    border: 8px;
+}
+
+.formcontainer{
+    text-align: center;
+    max-width: 300px;
+    margin: 0px auto;
+    margin-bottom: 10px;
+    border: solid;
+    padding: 5px;
+}
+
+
+.formcontainer:after{
+    content:' ';
+    display: block;
+    clear: both;
+
+}
+
+.form label{
+    font-weight: bold;
+}
+.form p{
+    font-weight: bold;
+}
+
+.form input{
+    font-weight: bold;
+}
+
 
 footer{
     background-color: black;
